--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       Either right click and select "Inspect" or use the shortcut Option + ⌘ + J
       (on macOS), or Shift + CTRL + J (on Windows/Linux).
     </h3>
+    <main id="main"></main>
     <script src="code.js"></script>
+    
   </body>
 </html>
